--- a/output/index.html
+++ b/output/index.html
@@ -8,12 +8,12 @@
 
   <body class="bg-nor-easter text-smurf-blood">
     <div class="flex h-60 min-h-screen flex-col items-center">
-      <header class="bg-bludacris p-4">
+      <header class="bg-bludacris p-10 my-4 lg:mt-10 lg:mb-14">
         <h1>andy@andyleclair.dev$><span class="blink">_</span></h1>
       </header>
       <main class="h-96 flex-1 p-4">
         
-  <h2>Posts!</h2>
+  <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
       2024-08-28 - <a href="posts/2024/08-28-readme.html">README</a>
