--- a/output/index.html
+++ b/output/index.html
@@ -16,6 +16,8 @@
   <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
+      2024-09-10 - <a href="posts/2024/09-10-2024-gltest.html">GLtest</a>
+    </li><li>
       2024-08-28 - <a href="posts/2024/08-28-readme.html">README</a>
     </li><li>
       2024-08-27 - <a href="posts/2024/08-27-hello-world.html">Hello world!</a>
