fix some styling and post stuff

--- a/output/index.html
+++ b/output/index.html
@@ -11,7 +11,7 @@
       <header class="bg-bludacris p-10 my-4 lg:mt-10 lg:mb-14">
         <h1>andy@andyleclair.dev$><span class="blink">_</span></h1>
       </header>
-      <main class="h-96 flex-1 p-4">
+      <main class="relative grow min-h-96 flex-1 p-4">
         
   <h2 class="text-xl">Blog!</h2>
   <ul>
