--- a/output/index.html
+++ b/output/index.html
@@ -2,8 +2,13 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/app.css">
     <script type="text/javascript" src="/assets/app.js"></script>
+    
+    <title>andyleclair.dev</title>
+    <meta name="description" content="Personal website of Andy LeClair">
+  
   </head>
 
   <body class="bg-nor-easter text-smurf-blood">
@@ -17,6 +22,8 @@
   <ul>
     <li>
       2024-09-10 - <a href="posts/2024/09-10-2024-gltest.html">GLtest</a>
+    </li><li>
+      2024-09-10 - <a href="posts/2024/09-10-opengl-part-2.html">OpenGL Part 2</a>
     </li><li>
       2024-08-28 - <a href="posts/2024/08-28-readme.html">README</a>
     </li><li>
