--- a/output/index.html
+++ b/output/index.html
@@ -21,9 +21,11 @@
   <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
-      2024-09-10 - <a href="posts/2024/09-10-2024-gltest.html">GLtest</a>
+      2024-09-11 - <a href="posts/2024/09-11-opengl-part-3.html">OpenGL Part 3</a>
     </li><li>
       2024-09-10 - <a href="posts/2024/09-10-opengl-part-2.html">OpenGL Part 2</a>
+    </li><li>
+      2024-09-09 - <a href="posts/2024/09-09-gltest.html">GLtest</a>
     </li><li>
       2024-08-28 - <a href="posts/2024/08-28-readme.html">README</a>
     </li><li>
