--- a/output/index.html
+++ b/output/index.html
@@ -21,6 +21,8 @@
   <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
+      2024-10-28 - <a href="posts/2024/10-28-live-fridge.html">Live Fridge</a>
+    </li><li>
       2024-09-11 - <a href="posts/2024/09-11-opengl-part-3.html">OpenGL Part 3</a>
     </li><li>
       2024-09-10 - <a href="posts/2024/09-10-opengl-part-2.html">OpenGL Part 2</a>
