--- a/output/index.html
+++ b/output/index.html
@@ -38,7 +38,9 @@
   </ul>
 
       </main>
-      <footer class="bg-bludacris p-4 text-center">© Andy LeClair 2024</footer>
+      <footer class="bg-bludacris p-4 text-center">
+        © Andy LeClair 2024 | <a href="/atom.xml">Atom</a> | <a href="/feed.xml">RSS</a>
+      </footer>
     </div>
   </body>
 </html>
