--- a/output/index.html
+++ b/output/index.html
@@ -14,13 +14,15 @@
   <body class="bg-nor-easter text-smurf-blood">
     <div class="flex h-60 min-h-screen flex-col items-center">
       <header class="bg-bludacris p-10 my-4 lg:mt-10 lg:mb-14">
-        <h1>andy@andyleclair.dev$><span class="blink">_</span></h1>
+        <h1><a href="https://andyleclair.dev/">andy@andyleclair.dev</a>$><span class="blink">_</span></h1>
       </header>
       <main class="relative grow min-h-96 flex-1 p-4">
         
   <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
+      2024-12-31 - <a href="posts/2024/12-31-dev-server.html">Dev Server</a>
+    </li><li>
       2024-12-30 - <a href="posts/2024/12-30-adding-rss-to-a-static-site.html">Adding RSS to a static site</a>
     </li><li>
       2024-11-15 - <a href="posts/2024/11-15-how-to-do-a-preload-good.html">How To Do A Preload Good</a>
@@ -40,7 +42,7 @@
   </ul>
 
       </main>
-      <footer class="bg-bludacris p-4 text-center">
+      <footer class="mt-24 bg-bludacris p-4 text-center">
         © Andy LeClair 2024 | <a href="/atom.xml">Atom</a> | <a href="/feed.xml">RSS</a>
       </footer>
     </div>
