--- a/output/index.html
+++ b/output/index.html
@@ -21,6 +21,8 @@
   <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
+      2025-01-21 - <a href="posts/2025/01-21-things-you-can-do-with-ecto.html">Things You Can Do With Ecto</a>
+    </li><li>
       2024-12-31 - <a href="posts/2024/12-31-dev-server.html">Dev Server</a>
     </li><li>
       2024-12-30 - <a href="posts/2024/12-30-adding-rss-to-a-static-site.html">Adding RSS to a static site</a>
