add terminal coffee post

--- a/output/index.html
+++ b/output/index.html
@@ -21,6 +21,8 @@
   <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
+      2025-05-18 - <a href="posts/2025/05-18-terminal-shop-coffee-first-impressions.html">terminal.shop coffee first impressions</a>
+    </li><li>
       2025-05-14 - <a href="posts/2025/05-14-review-stalefish-its-all-down-here-from-hill.html">Review: Stalefish - It&#39;s All Down Here from Hill</a>
     </li><li>
       2025-01-21 - <a href="posts/2025/01-21-things-you-can-do-with-ecto.html">Things You Can Do With Ecto</a>
