--- a/output/index.html
+++ b/output/index.html
@@ -21,6 +21,8 @@
   <h2 class="text-xl">Blog!</h2>
   <ul>
     <li>
+      2025-08-11 - <a href="posts/2025/08-11-first-game.html">First Game!</a>
+    </li><li>
       2025-05-18 - <a href="posts/2025/05-18-terminal-shop-coffee-first-impressions.html">terminal.shop coffee first impressions</a>
     </li><li>
       2025-05-14 - <a href="posts/2025/05-14-review-stalefish-its-all-down-here-from-hill.html">Review: Stalefish - It&#39;s All Down Here from Hill</a>
